P3/test/pl0/error/error32.pl0
procedure a;
	procedure b;
		procedure c;
			procedure d;
			begin
			end;
			begin
			end;
			begin
			end;
			begin
			end;
			
begin
end.
